--- a/_posts/2019-12-28-the-us-narrative-today.html
+++ b/_posts/2019-12-28-the-us-narrative-today.html
@@ -1494,107 +1494,107 @@ stories:
   domain: http://www.sun-sentinel.com/
   link: http://www.sun-sentinel.com/local/broward/margate/fl-ne-margate-man-kills-dog-arrested-20191228-i26vtxff7rgvho7izwopyzvvga-story.html
 images:
-- name: miamibeach-miamibeach-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-clean-view.jpg
-- name: copper-circuit-please-do-not-feed-the-pigeon.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-please-do-not-feed-the-pigeon.jpg
-- name: downtown-street-view-leaflets-of-the-russian-revolution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-street-view-leaflets-of-the-russian-revolution.jpg
-- name: yosemite-yosemite-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-pablo-blue.jpg
-- name: christianity-christianity-under-construction-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-crafty-painting.jpg
-- name: old-school-house-old-schoolhouse-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-matrix.jpg
-- name: old-cabin-oldcabin-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-colored-circuits.jpg
-- name: stories-solidies-planning-attack-blue-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-solidies-planning-attack-blue-matrix.jpg
-- name: bf-skinner-washington-monument-afar.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-washington-monument-afar.jpg
-- name: powerlines-power-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-oily-mcoilface.jpg
-- name: cargo-ship-cargo-ship-on-sea-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-horiz-circuit.jpg
-- name: carry-load-carryload-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-clean-view.jpg
-- name: window-window-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-smoking-cigarette.jpg
-- name: machine-road-machine-road-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-gan-vogh.jpg
-- name: fence-mexico-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-sand-paper.jpg
-- name: oldroad-old-road-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-satan-red.jpg
-- name: hollywood-building-hollywood-building-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dark-rain.jpg
-- name: la-muse-new-york-city-skyline_36655833162_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-new-york-city-skyline_36655833162_o.jpg
-- name: liberty-back-statue-liberty-back-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-deep-connections.jpg
-- name: old-gas-pumps-oldgaspumps-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-purp-paper.jpg
-- name: eduardo-eduardo-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-dark-soul.jpg
-- name: nazi-invasion-docks-in-itealy-tower.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-docks-in-itealy-tower.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-dark-dali.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-dark-dali.png
-- name: sand-hand-sand-hand-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-alien-goggles.jpg
-- name: sand-hand-sand-hand-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-colored-circuits.jpg
-- name: udnie-IMG_8358.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8358.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-far-away.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-far-away.png
-- name: old-cabin-oldcabin-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-matrix.jpg
-- name: aws-s3-square-68-161-800-500-0-max-0--5--1-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-68-161-800-500-0-max-0--5--1-square.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-jap-dys-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-jap-dys-1.jpg
-- name: flower-barbed-wire-flower-barbed-wire-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-satan-red.jpg
-- name: fence-bw-fist-dark-dali.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-bw-fist-dark-dali.png
-- name: bf-skinner-fat-old-pigeon-on-fence.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-fat-old-pigeon-on-fence.jpg
-- name: server-cloud-server-racks-clouds-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-propaganda-leaflets.jpg
-- name: old-house-oldhouse-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-ww2-dresden.jpg
-- name: status-berlin-status-berlin-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-copper-circuit-2.jpg
-- name: locked-up-steam-lock-up-steam-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-blue-granite.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-colorful-blocks.jpg
-- name: old-granary-field-oldhouse-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-blue-granite.jpg
-- name: white-house-lawn-white-house-lawn-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-internet-numbers.jpg
-- name: copper-circuit-old-remington-typewriter.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-remington-typewriter.jpg
-- name: old-cabin-oldcabin-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-graham-sutherland.jpg
-- name: windowmountain-window-mountain-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-green-zuma.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-ww2-dresden.jpg
-- name: walled-garden-walled-garden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden.jpg
-- name: old-granary-field-oldhouse-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-atari-missle.jpg
-- name: stalin-time-british-sgtreet-phone-booth.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-british-sgtreet-phone-booth.jpg
-- name: nyc-flag-nycflag-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-neo-instinct.jpg
-- name: scream-DSC_0002.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-DSC_0002.jpg
-- name: blossombar-yellow-collage-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-yellow-collage-file-00-00-00-00.jpg
-- name: locked-up-steam-lock-up-steam-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-blue-circuit-5.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-dry-skin.jpg
+- name: berlinwall-DSC-0084-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-post-modern.jpg
+- name: old-gas-pumps-oldgaspumps-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-plentiful.jpg
+- name: razorcliff-razorcliff-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-atari-missle.jpg
+- name: server-cloud1-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-copper-circuit.jpg
+- name: store-on-corner-oldcabin-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-really-hot.jpg
+- name: downtheline-downtheline-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-dark-soul.jpg
+- name: server-cloud-server-racks-clouds-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-copper-circuit-2.jpg
+- name: subway-subway-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-dark-rain.jpg
+- name: curtain-curtain-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-dark-dali.jpg
+- name: nazi-invasion-surveillance-3-camers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-surveillance-3-camers.jpg
+- name: oldhotel-oldhotel-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-graham-sutherland.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-blue-granite.jpg
+- name: dragon-desert-desert-dragon-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-blue-circuit.jpg
+- name: wind-mills-windmills-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-dali-two.jpg
+- name: copper-circuit-high-speed-train-station.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-high-speed-train-station.jpg
+- name: aws-s3-stories-cargo-ship-on-sea-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cargo-ship-on-sea-atari-missle.jpg
+- name: art-museum-art-museum-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-smooth-ride.jpg
+- name: old-barn-old-barn-1500-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-cinnamon-rolls.jpg
+- name: miamibeach-miamibeach-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-atari-missle.jpg
+- name: oldhotel-oldhotel-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-hot-spicy.jpg
+- name: capital-dc-flag-side-view-leaflets-of-the-russian-revolution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-dc-flag-side-view-leaflets-of-the-russian-revolution.jpg
+- name: oldbarn-oldbarn-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-colorful-blocks.jpg
+- name: aws-s3-stories-catacombs-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-catacombs-blue-circuit-3.jpg
+- name: blossombar-dark-rain-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-dark-rain-file-00-00-00-00.jpg
+- name: windowmountain-window-mountain-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-pablo-blue.jpg
+- name: supreme-court-supremecourt-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-constitution.jpg
+- name: braceros-domingo-ulloa-google-front-of-business.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-google-front-of-business.jpg
+- name: castle-wall-DSC-0067-neo-instinct.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-neo-instinct.JPG
+- name: curtain-curtain-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-sunday.jpg
+- name: berlinwall2-berlinwall-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-yellow-paper.jpg
+- name: old-church-oldchurch-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-atari-missle.jpg
+- name: abe-lincoln-one-smooth-ride-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-smooth-ride-file-00-00-07-91.jpg
+- name: rockingchair-face-2-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-bright-sand.jpg
+- name: downtown-trucksilo-space-pizza.jpg.-tmp-uploadjpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-space-pizza.jpg.-tmp-uploadjpg
+- name: rockingchair-face-2-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-atari-asteroids.jpg
+- name: nazi-invasion-dragon-turning-head.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-dragon-turning-head.jpg
+- name: copper-circuit-statue-face-looking-up.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-statue-face-looking-up.jpg
+- name: hollywood-building-hollywood-building-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-rainbow-festival.jpg
+- name: nazi-invasion-underground-subway_36342747010_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-underground-subway_36342747010_o.jpg
+- name: power-lines-power-lines-empty-space-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-purp-paper.jpg
+- name: scream-IMG_8318.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_8318.jpg
+- name: powerlines-power-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-ww2-dresden.jpg
+- name: old-barn-old-barn-1500-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-purple-storm.jpg
+- name: trucksilo-trucksilo-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-really-hot.jpg
+- name: stories-ellisisland-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-ellisisland-blue-circuit.jpg
+- name: white-house-whitehouse-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-gan-vogh.jpg
+- name: statue-of-liberty-front-view-statueofliberty-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-bright-sand.jpg
+- name: fence-mexico-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-dali-two.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-post-modern.jpg
+- name: beach-rocks-beach-rocks-currents-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-smooth-ride.jpg
 ---
 Memphis Finishes Whirlwind Stretch With Cotton Bowl Loss.&nbsp;Job Hopping, Lifelong Learning Top 2020s Workforce Trends.&nbsp;Hounds Robertson, Griffin Sign With Colleges.&nbsp;New Rules, Still No Answers About Saltwater Purge.&nbsp;Florida Falls To Utah State In Orange Bowl Basketball Classic.&nbsp;Hot Doughnut Action And More Decent Brews At Happy Tap.&nbsp;Numerous Newly Elected Officials Starting Initial Terms In January.&nbsp;Virginia Cyclist Dies After Collision With Passenger Train.&nbsp;
